# Oracle-reset-password-tool

./: .gitignore  AGENTS.md  README.md  plan.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/services/: oracle.py  verification_tokens.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_models.py  test_oracle_service.py  test_verification_tokens.py
frontend/: index.html
